--- a/MarkaTLScript/MarkaTLScript/Views/Shared/_sidebar.cshtml
+++ b/MarkaTLScript/MarkaTLScript/Views/Shared/_sidebar.cshtml
@@ -83,7 +83,7 @@
                                 <a href="javascript:void(0)" class="nav-link"> Kontör Apileri </a>
                             </li>
                             <li class="nav-item">
-                                <a href="javascript:void(0)" class="nav-link"> Kontör Operatör Ayarları </a>
+                                <a href="/OperatorAyarlari" class="nav-link"> Kontör Operatör Ayarları </a>
                             </li>
 
                         </ul>
