--- a/MarkaTLScript/MarkaTLScript/Views/Shared/_vendor_scripts.cshtml
+++ b/MarkaTLScript/MarkaTLScript/Views/Shared/_vendor_scripts.cshtml
@@ -1,4 +1,6 @@
-﻿<!-- JAVASCRIPT -->
+﻿<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- JAVASCRIPT -->
 <script src="~/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="~/assets/libs/simplebar/simplebar.min.js"></script>
 <script src="~/assets/libs/node-waves/waves.min.js"></script>
