--- a/MarkaTLScript/MarkaTLScript/Views/Shared/_head_css.cshtml
+++ b/MarkaTLScript/MarkaTLScript/Views/Shared/_head_css.cshtml
@@ -8,3 +8,6 @@
 <link href="~/assets/css/app.min.css" rel="stylesheet" type="text/css" />
 <!-- custom Css-->
 <link href="~/assets/css/custom.min.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
