--- a/MarkaTLScript/MarkaTLScript/Views/Shared/_sidebar.cshtml
+++ b/MarkaTLScript/MarkaTLScript/Views/Shared/_sidebar.cshtml
@@ -80,7 +80,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a href="javascript:void(0)" class="nav-link"> Kontör Apileri </a>
+                                <a href="/KontorApileri" class="nav-link"> Kontör Apileri </a>
                             </li>
                             <li class="nav-item">
                                 <a href="/OperatorAyarlari" class="nav-link"> Kontör Operatör Ayarları </a>
