--- a/MarkaTLScript/MarkaTLScript/Views/Shared/_sidebar.cshtml
+++ b/MarkaTLScript/MarkaTLScript/Views/Shared/_sidebar.cshtml
@@ -104,7 +104,7 @@
                                 <a href="javascript:void(0)" class="nav-link"> Ödeme Bildirimleri </a>
                             </li>
                             <li class="nav-item">
-                                <a href="javascript:void(0)" class="nav-link"> Banka Ayarları </a>
+                                <a href="/BankaAyarlari" class="nav-link"> Banka Ayarları </a>
                             </li>
                             <li class="nav-item">
                                 <a href="javascript:void(0)" class="nav-link"> Virman Kayıtları </a>
