--- a/MarkaTLScript/MarkaTLScript/Views/Kontor/KontorApileri.cshtml
+++ b/MarkaTLScript/MarkaTLScript/Views/Kontor/KontorApileri.cshtml
@@ -9,7 +9,7 @@
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h4 class="card-title mb-0">Kontör API Listesi</h4>
-                <button class="btn btn-success" onclick="openApiModal()">+ Yeni Kontör API Ekle</button>
+                <button class="btn btn-sm btn-success" onclick="openApiModal()">+ Yeni Kontör API Ekle</button>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
