--- a/MarkaTLScript/MarkaTLScript/Views/Shared/_sidebar.cshtml
+++ b/MarkaTLScript/MarkaTLScript/Views/Shared/_sidebar.cshtml
@@ -141,10 +141,10 @@
                     <div class="collapse menu-dropdown" id="sidebarPages">
                         <ul class="nav nav-sm flex-column">
                             <li class="nav-item">
-                                <a href="javascript:void(0)" class="nav-link"> Gider Kayıtları</a>
+                                <a href="/GiderKayitlari" class="nav-link"> Gider Kayıtları</a>
                             </li>
                             <li class="nav-item">
-                                <a href="javascript:void(0)" class="nav-link"> Gelir Kayıtları</a>
+                                <a href="/GelirKayitlari" class="nav-link"> Gelir Kayıtları</a>
                             </li>
                             <li class="nav-item">
                                 <a href="javascript:void(0)" class="nav-link"> Genel Muhasebe</a>
