--- a/MarkaTLScript/MarkaTLScript/Views/Kontor/OperatorAyarlari.cshtml
+++ b/MarkaTLScript/MarkaTLScript/Views/Kontor/OperatorAyarlari.cshtml
@@ -27,7 +27,7 @@
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h4 class="card-title mb-0">Operatörler</h4>
-                <button class="btn btn-success" onclick="openOperatorModal()">+ Yeni Operatör Ekle</button>
+                <button class="btn btn-sm btn-success" onclick="openOperatorModal()">+ Yeni Operatör Ekle</button>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
